--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="title_activity_meditation">Meditation</string>
     <string name="title_activity_animated_drop_down">AnimatedDropDown</string>
     <string name="title_activity_instagram_app">InstagramApp</string>
+    <string name="title_activity_navigation">Navigation</string>
 </resources>
