--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="title_activity_animated_drop_down">AnimatedDropDown</string>
     <string name="title_activity_instagram_app">InstagramApp</string>
     <string name="title_activity_navigation">Navigation</string>
+    <string name="title_activity_bottom_nav_with_badges">BottomNavWithBadges</string>
 </resources>
