--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="title_activity_support_all_screen_size">SupportAllScreenSize</string>
     <string name="title_activity_pagination">Pagination</string>
     <string name="title_activity_bottom_sheet">BottomSheet</string>
+    <string name="title_activity_drawer">DrawerActivity</string>
 </resources>
